--- a/Sample Code/app/build.gradle
+++ b/Sample Code/app/build.gradle
@@ -1,11 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
-        applicationId "com.dji.sdk.sample"
+        applicationId "com.vg.goprolive"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -25,7 +31,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.github.davidmoten:rxjava-extras:0.7.9.10'
+    compile 'commons-io:commons-io:2.4'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
     compile project(':dJISDKLIB')
 
 }
