--- a/Sample Code/dJISDKLIB/build.gradle
+++ b/Sample Code/dJISDKLIB/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile files('libs/okhttp-3.2.0.jar')
     compile files('libs/okio-1.7.0.jar')
     compile files('libs/retrofit-2.0.1.jar')
-    compile files('libs/rxandroid-1.1.0.jar')
-    compile files('libs/rxjava-1.1.2.jar')
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
     compile files('libs/sqlbrite-0.6.2.jar')
 }
